// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`UpdateWalletName > should render 1`] = `
<DocumentFragment>
  <div
    class="custom-scroll overflow-overlay fixed inset-0 z-50 flex w-full overflow-y-hidden bg-theme-secondary-900-rgba/40 backdrop-blur-xl dark:bg-black-rgba/40 dark:bg-opacity-80 md:py-20"
    data-testid="Modal__overlay"
  >
    <div
      class="max-w-full flex-1 md:m-auto md:max-w-2xl md:px-10"
      tabindex="-1"
    >
      <div
        class="relative flex min-h-full flex-col overflow-hidden bg-theme-background shadow-2xl sm:mb-0 md:h-auto md:rounded-xl px-6 pt-4 md:p-8"
        data-testid="Modal__inner"
      >
        <div
          class="absolute right-0 top-0 z-10 mr-6 mt-4 rounded bg-theme-primary-100 transition-all duration-100 ease-linear hover:bg-theme-primary-800 hover:text-white green:hover:bg-theme-primary-700 dark:bg-theme-secondary-800 dark:text-theme-secondary-200 dark:hover:bg-theme-primary-500 dark:hover:text-white md:mr-8 md:mt-8"
        >
          <button
            class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none h-8 w-8"
            data-testid="Modal__close-button"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div>
                <div
                  style="height: 16px; width: 16px;"
                >
                  <svg
                    id="cross"
                    style="height: 100%; width: 100%;"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    >
                      <path
                        d="M.954 18.981l18-18M18.954 18.981l-18-18"
                      />
                    </g>
                  </svg>
                </div>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative flex flex-1 flex-col space-y-1.5"
        >
          <h2
            class="mb-0 max-w-[calc(100%_-_32px)] text-lg font-bold md:pt-0 md:text-2xl"
          >
            Wallet Name
          </h2>
          <div
            class="flex flex-1 flex-col"
          >
            <div
              class="whitespace-pre-line pr-10 text-sm text-theme-secondary-text md:pr-0 md:text-base"
            >
              Enter a name for this wallet address (only visible to you).
            </div>
            <form
              class="mt-8"
              data-testid="Form"
            >
              <fieldset
                class="[&>.FormLabel]:text-theme-primary-600 focus-within:[&>.FormLabel]:text-theme-primary-600 flex min-w-0 flex-col"
              >
                <label
                  class="FormLabel mb-2 flex text-sm font-semibold leading-[17px] text-theme-secondary-text transition-colors duration-100"
                  data-testid="FormLabel"
                  for="name"
                >
                  Wallet Name
                </label>
                <div
                  class="relative"
                >
                  <div
                    class="flex w-full appearance-none items-center space-x-2 rounded px-4 text-theme-text transition-colors duration-200 border border-theme-secondary-400 bg-theme-background focus-within:border-theme-primary-600 focus-within:ring-theme-primary-600 dark:border-theme-secondary-700 focus-within:ring-1 h-12 overflow-hidden sm:h-14"
                  >
                    <div
                      class="relative flex h-full flex-1"
                    >
                      <input
                        aria-invalid="false"
                        autocomplete="off"
                        class="!bg-transparent !p-0 focus:shadow-none focus:outline-none focus:!ring-0 focus:!ring-transparent [&.shadow-none]:shadow-none no-ligatures w-full border-none !text-sm placeholder:text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 sm:!text-base"
                        data-testid="UpdateWalletName__input"
                        name="name"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </fieldset>
              <div
                class="fixed inset-x-0 bottom-0 flex gap-3 bg-theme-background px-8 py-3 shadow-footer-smooth dark:bg-black dark:shadow-footer-smooth-dark sm:relative sm:inset-auto sm:mt-6 sm:justify-end sm:bg-transparent sm:p-0 sm:shadow-none sm:dark:bg-transparent sm:dark:shadow-none [&>button]:flex-1 sm:[&>button]:flex-none pb-3 sm:pb-0"
              >
                <button
                  class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed dark:bg-theme-secondary-800 dark:text-theme-secondary-200 bg-theme-primary-100 text-theme-primary-600 hover:bg-theme-primary-800 green:hover:bg-theme-primary-700 hover:text-white dark:hover:bg-theme-primary-500"
                  data-testid="UpdateWalletName__cancel"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Cancel
                  </div>
                </button>
                <button
                  class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed disabled:bg-theme-secondary-200 disabled:text-theme-secondary-400 dark:disabled:bg-theme-secondary-800 dark:disabled:text-theme-secondary-700"
                  data-testid="UpdateWalletName__submit"
                  disabled=""
                  type="submit"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Save
                  </div>
                </button>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`UpdateWalletName > should show an error message for duplicate name 1`] = `
<DocumentFragment>
  <div
    class="custom-scroll overflow-overlay fixed inset-0 z-50 flex w-full overflow-y-hidden bg-theme-secondary-900-rgba/40 backdrop-blur-xl dark:bg-black-rgba/40 dark:bg-opacity-80 md:py-20"
    data-testid="Modal__overlay"
  >
    <div
      class="max-w-full flex-1 md:m-auto md:max-w-2xl md:px-10"
      tabindex="-1"
    >
      <div
        class="relative flex min-h-full flex-col overflow-hidden bg-theme-background shadow-2xl sm:mb-0 md:h-auto md:rounded-xl px-6 pt-4 md:p-8"
        data-testid="Modal__inner"
      >
        <div
          class="absolute right-0 top-0 z-10 mr-6 mt-4 rounded bg-theme-primary-100 transition-all duration-100 ease-linear hover:bg-theme-primary-800 hover:text-white green:hover:bg-theme-primary-700 dark:bg-theme-secondary-800 dark:text-theme-secondary-200 dark:hover:bg-theme-primary-500 dark:hover:text-white md:mr-8 md:mt-8"
        >
          <button
            class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none h-8 w-8"
            data-testid="Modal__close-button"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div>
                <div
                  style="height: 16px; width: 16px;"
                >
                  <svg
                    id="cross"
                    style="height: 100%; width: 100%;"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    >
                      <path
                        d="M.954 18.981l18-18M18.954 18.981l-18-18"
                      />
                    </g>
                  </svg>
                </div>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative flex flex-1 flex-col space-y-1.5"
        >
          <h2
            class="mb-0 max-w-[calc(100%_-_32px)] text-lg font-bold md:pt-0 md:text-2xl"
          >
            Wallet Name
          </h2>
          <div
            class="flex flex-1 flex-col"
          >
            <div
              class="whitespace-pre-line pr-10 text-sm text-theme-secondary-text md:pr-0 md:text-base"
            >
              Enter a name for this wallet address (only visible to you).
            </div>
            <form
              class="mt-8"
              data-testid="Form"
            >
              <fieldset
                class="[&>.FormLabel]:text-theme-danger-500 focus-within:[&>.FormLabel]:text-theme-danger-500 flex min-w-0 flex-col"
              >
                <label
                  class="FormLabel mb-2 flex text-sm font-semibold leading-[17px] text-theme-secondary-text transition-colors duration-100"
                  data-testid="FormLabel"
                  for="name"
                >
                  Wallet Name
                </label>
                <div
                  class="relative"
                >
                  <div
                    class="flex w-full appearance-none items-center space-x-2 rounded px-4 text-theme-text transition-colors duration-200 border border-theme-danger-500 bg-theme-background focus-within:ring-theme-danger-500 focus-within:ring-1 h-12 overflow-hidden sm:h-14"
                  >
                    <div
                      class="relative flex h-full flex-1"
                    >
                      <input
                        aria-invalid="true"
                        autocomplete="off"
                        class="!bg-transparent !p-0 focus:shadow-none focus:outline-none focus:!ring-0 focus:!ring-transparent [&.shadow-none]:shadow-none no-ligatures w-full border-none !text-sm placeholder:text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 sm:!text-base"
                        data-testid="UpdateWalletName__input"
                        name="name"
                        type="text"
                        value=""
                      />
                    </div>
                    <div
                      class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-danger-500"
                      data-testid="Input__addon-end"
                    >
                      <span
                        data-errortext="The name 'ARK Wallet 2' is already assigned to another wallet"
                        data-testid="Input__error"
                      >
                        <div
                          class="text-theme-danger-500"
                        >
                          <div
                            style="height: 20px; width: 20px;"
                          >
                            <svg
                              id="circle-exclamation-mark"
                              style="height: 100%; width: 100%;"
                              viewBox="0 0 20 20"
                              x="0"
                              xml:space="preserve"
                              xmlns="http://www.w3.org/2000/svg"
                              y="0"
                            >
                              <g
                                fill="none"
                                stroke="currentColor"
                                stroke-width="2"
                              >
                                <circle
                                  cx="10"
                                  cy="10"
                                  r="9"
                                  stroke-miterlimit="10"
                                />
                                <path
                                  d="M10 10.5v-5"
                                  stroke-linecap="round"
                                  stroke-miterlimit="10"
                                />
                                <path
                                  d="M10 14h0"
                                  stroke-linecap="round"
                                  stroke-linejoin="round"
                                />
                              </g>
                            </svg>
                          </div>
                        </div>
                      </span>
                    </div>
                  </div>
                </div>
              </fieldset>
              <div
                class="fixed inset-x-0 bottom-0 flex gap-3 bg-theme-background px-8 py-3 shadow-footer-smooth dark:bg-black dark:shadow-footer-smooth-dark sm:relative sm:inset-auto sm:mt-6 sm:justify-end sm:bg-transparent sm:p-0 sm:shadow-none sm:dark:bg-transparent sm:dark:shadow-none [&>button]:flex-1 sm:[&>button]:flex-none pb-3 sm:pb-0"
              >
                <button
                  class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed dark:bg-theme-secondary-800 dark:text-theme-secondary-200 bg-theme-primary-100 text-theme-primary-600 hover:bg-theme-primary-800 green:hover:bg-theme-primary-700 hover:text-white dark:hover:bg-theme-primary-500"
                  data-testid="UpdateWalletName__cancel"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Cancel
                  </div>
                </button>
                <button
                  class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed disabled:bg-theme-secondary-200 disabled:text-theme-secondary-400 dark:disabled:bg-theme-secondary-800 dark:disabled:text-theme-secondary-700"
                  data-testid="UpdateWalletName__submit"
                  disabled=""
                  type="submit"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Save
                  </div>
                </button>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`UpdateWalletName > should show an error message for duplicate name 2`] = `
<DocumentFragment>
  <div
    class="custom-scroll overflow-overlay fixed inset-0 z-50 flex w-full overflow-y-hidden bg-theme-secondary-900-rgba/40 backdrop-blur-xl dark:bg-black-rgba/40 dark:bg-opacity-80 md:py-20"
    data-testid="Modal__overlay"
  >
    <div
      class="max-w-full flex-1 md:m-auto md:max-w-2xl md:px-10"
      tabindex="-1"
    >
      <div
        class="relative flex min-h-full flex-col overflow-hidden bg-theme-background shadow-2xl sm:mb-0 md:h-auto md:rounded-xl px-6 pt-4 md:p-8"
        data-testid="Modal__inner"
      >
        <div
          class="absolute right-0 top-0 z-10 mr-6 mt-4 rounded bg-theme-primary-100 transition-all duration-100 ease-linear hover:bg-theme-primary-800 hover:text-white green:hover:bg-theme-primary-700 dark:bg-theme-secondary-800 dark:text-theme-secondary-200 dark:hover:bg-theme-primary-500 dark:hover:text-white md:mr-8 md:mt-8"
        >
          <button
            class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none h-8 w-8"
            data-testid="Modal__close-button"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div>
                <div
                  style="height: 16px; width: 16px;"
                >
                  <svg
                    id="cross"
                    style="height: 100%; width: 100%;"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    >
                      <path
                        d="M.954 18.981l18-18M18.954 18.981l-18-18"
                      />
                    </g>
                  </svg>
                </div>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative flex flex-1 flex-col space-y-1.5"
        >
          <h2
            class="mb-0 max-w-[calc(100%_-_32px)] text-lg font-bold md:pt-0 md:text-2xl"
          >
            Wallet Name
          </h2>
          <div
            class="flex flex-1 flex-col"
          >
            <div
              class="whitespace-pre-line pr-10 text-sm text-theme-secondary-text md:pr-0 md:text-base"
            >
              Enter a name for this wallet address (only visible to you).
            </div>
            <form
              class="mt-8"
              data-testid="Form"
            >
              <fieldset
                class="[&>.FormLabel]:text-theme-danger-500 focus-within:[&>.FormLabel]:text-theme-danger-500 flex min-w-0 flex-col"
              >
                <label
                  class="FormLabel mb-2 flex text-sm font-semibold leading-[17px] text-theme-secondary-text transition-colors duration-100"
                  data-testid="FormLabel"
                  for="name"
                >
                  Wallet Name
                </label>
                <div
                  class="relative"
                >
                  <div
                    class="flex w-full appearance-none items-center space-x-2 rounded px-4 text-theme-text transition-colors duration-200 border border-theme-danger-500 bg-theme-background focus-within:ring-theme-danger-500 focus-within:ring-1 h-12 overflow-hidden sm:h-14"
                  >
                    <div
                      class="relative flex h-full flex-1"
                    >
                      <input
                        aria-invalid="true"
                        autocomplete="off"
                        class="!bg-transparent !p-0 focus:shadow-none focus:outline-none focus:!ring-0 focus:!ring-transparent [&.shadow-none]:shadow-none no-ligatures w-full border-none !text-sm placeholder:text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 sm:!text-base"
                        data-testid="UpdateWalletName__input"
                        name="name"
                        type="text"
                        value=""
                      />
                    </div>
                    <div
                      class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-danger-500"
                      data-testid="Input__addon-end"
                    >
                      <span
                        data-errortext="The name 'ark wallet 2' is already assigned to another wallet"
                        data-testid="Input__error"
                      >
                        <div
                          class="text-theme-danger-500"
                        >
                          <div
                            style="height: 20px; width: 20px;"
                          >
                            <svg
                              id="circle-exclamation-mark"
                              style="height: 100%; width: 100%;"
                              viewBox="0 0 20 20"
                              x="0"
                              xml:space="preserve"
                              xmlns="http://www.w3.org/2000/svg"
                              y="0"
                            >
                              <g
                                fill="none"
                                stroke="currentColor"
                                stroke-width="2"
                              >
                                <circle
                                  cx="10"
                                  cy="10"
                                  r="9"
                                  stroke-miterlimit="10"
                                />
                                <path
                                  d="M10 10.5v-5"
                                  stroke-linecap="round"
                                  stroke-miterlimit="10"
                                />
                                <path
                                  d="M10 14h0"
                                  stroke-linecap="round"
                                  stroke-linejoin="round"
                                />
                              </g>
                            </svg>
                          </div>
                        </div>
                      </span>
                    </div>
                  </div>
                </div>
              </fieldset>
              <div
                class="fixed inset-x-0 bottom-0 flex gap-3 bg-theme-background px-8 py-3 shadow-footer-smooth dark:bg-black dark:shadow-footer-smooth-dark sm:relative sm:inset-auto sm:mt-6 sm:justify-end sm:bg-transparent sm:p-0 sm:shadow-none sm:dark:bg-transparent sm:dark:shadow-none [&>button]:flex-1 sm:[&>button]:flex-none pb-3 sm:pb-0"
              >
                <button
                  class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed dark:bg-theme-secondary-800 dark:text-theme-secondary-200 bg-theme-primary-100 text-theme-primary-600 hover:bg-theme-primary-800 green:hover:bg-theme-primary-700 hover:text-white dark:hover:bg-theme-primary-500"
                  data-testid="UpdateWalletName__cancel"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Cancel
                  </div>
                </button>
                <button
                  class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed disabled:bg-theme-secondary-200 disabled:text-theme-secondary-400 dark:disabled:bg-theme-secondary-800 dark:disabled:text-theme-secondary-700"
                  data-testid="UpdateWalletName__submit"
                  disabled=""
                  type="submit"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Save
                  </div>
                </button>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`UpdateWalletName > should show an error message for duplicate name 3`] = `
<DocumentFragment>
  <div
    class="custom-scroll overflow-overlay fixed inset-0 z-50 flex w-full overflow-y-hidden bg-theme-secondary-900-rgba/40 backdrop-blur-xl dark:bg-black-rgba/40 dark:bg-opacity-80 md:py-20"
    data-testid="Modal__overlay"
  >
    <div
      class="max-w-full flex-1 md:m-auto md:max-w-2xl md:px-10"
      tabindex="-1"
    >
      <div
        class="relative flex min-h-full flex-col overflow-hidden bg-theme-background shadow-2xl sm:mb-0 md:h-auto md:rounded-xl px-6 pt-4 md:p-8"
        data-testid="Modal__inner"
      >
        <div
          class="absolute right-0 top-0 z-10 mr-6 mt-4 rounded bg-theme-primary-100 transition-all duration-100 ease-linear hover:bg-theme-primary-800 hover:text-white green:hover:bg-theme-primary-700 dark:bg-theme-secondary-800 dark:text-theme-secondary-200 dark:hover:bg-theme-primary-500 dark:hover:text-white md:mr-8 md:mt-8"
        >
          <button
            class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none h-8 w-8"
            data-testid="Modal__close-button"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div>
                <div
                  style="height: 16px; width: 16px;"
                >
                  <svg
                    id="cross"
                    style="height: 100%; width: 100%;"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    >
                      <path
                        d="M.954 18.981l18-18M18.954 18.981l-18-18"
                      />
                    </g>
                  </svg>
                </div>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative flex flex-1 flex-col space-y-1.5"
        >
          <h2
            class="mb-0 max-w-[calc(100%_-_32px)] text-lg font-bold md:pt-0 md:text-2xl"
          >
            Wallet Name
          </h2>
          <div
            class="flex flex-1 flex-col"
          >
            <div
              class="whitespace-pre-line pr-10 text-sm text-theme-secondary-text md:pr-0 md:text-base"
            >
              Enter a name for this wallet address (only visible to you).
            </div>
            <form
              class="mt-8"
              data-testid="Form"
            >
              <fieldset
                class="[&>.FormLabel]:text-theme-danger-500 focus-within:[&>.FormLabel]:text-theme-danger-500 flex min-w-0 flex-col"
              >
                <label
                  class="FormLabel mb-2 flex text-sm font-semibold leading-[17px] text-theme-secondary-text transition-colors duration-100"
                  data-testid="FormLabel"
                  for="name"
                >
                  Wallet Name
                </label>
                <div
                  class="relative"
                >
                  <div
                    class="flex w-full appearance-none items-center space-x-2 rounded px-4 text-theme-text transition-colors duration-200 border border-theme-danger-500 bg-theme-background focus-within:ring-theme-danger-500 focus-within:ring-1 h-12 overflow-hidden sm:h-14"
                  >
                    <div
                      class="relative flex h-full flex-1"
                    >
                      <input
                        aria-invalid="true"
                        autocomplete="off"
                        class="!bg-transparent !p-0 focus:shadow-none focus:outline-none focus:!ring-0 focus:!ring-transparent [&.shadow-none]:shadow-none no-ligatures w-full border-none !text-sm placeholder:text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 sm:!text-base"
                        data-testid="UpdateWalletName__input"
                        name="name"
                        type="text"
                        value=""
                      />
                    </div>
                    <div
                      class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-danger-500"
                      data-testid="Input__addon-end"
                    >
                      <span
                        data-errortext="The name 'ARK Wallet 2' is already assigned to another wallet"
                        data-testid="Input__error"
                      >
                        <div
                          class="text-theme-danger-500"
                        >
                          <div
                            style="height: 20px; width: 20px;"
                          >
                            <svg
                              id="circle-exclamation-mark"
                              style="height: 100%; width: 100%;"
                              viewBox="0 0 20 20"
                              x="0"
                              xml:space="preserve"
                              xmlns="http://www.w3.org/2000/svg"
                              y="0"
                            >
                              <g
                                fill="none"
                                stroke="currentColor"
                                stroke-width="2"
                              >
                                <circle
                                  cx="10"
                                  cy="10"
                                  r="9"
                                  stroke-miterlimit="10"
                                />
                                <path
                                  d="M10 10.5v-5"
                                  stroke-linecap="round"
                                  stroke-miterlimit="10"
                                />
                                <path
                                  d="M10 14h0"
                                  stroke-linecap="round"
                                  stroke-linejoin="round"
                                />
                              </g>
                            </svg>
                          </div>
                        </div>
                      </span>
                    </div>
                  </div>
                </div>
              </fieldset>
              <div
                class="fixed inset-x-0 bottom-0 flex gap-3 bg-theme-background px-8 py-3 shadow-footer-smooth dark:bg-black dark:shadow-footer-smooth-dark sm:relative sm:inset-auto sm:mt-6 sm:justify-end sm:bg-transparent sm:p-0 sm:shadow-none sm:dark:bg-transparent sm:dark:shadow-none [&>button]:flex-1 sm:[&>button]:flex-none pb-3 sm:pb-0"
              >
                <button
                  class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed dark:bg-theme-secondary-800 dark:text-theme-secondary-200 bg-theme-primary-100 text-theme-primary-600 hover:bg-theme-primary-800 green:hover:bg-theme-primary-700 hover:text-white dark:hover:bg-theme-primary-500"
                  data-testid="UpdateWalletName__cancel"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Cancel
                  </div>
                </button>
                <button
                  class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed disabled:bg-theme-secondary-200 disabled:text-theme-secondary-400 dark:disabled:bg-theme-secondary-800 dark:disabled:text-theme-secondary-700"
                  data-testid="UpdateWalletName__submit"
                  disabled=""
                  type="submit"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Save
                  </div>
                </button>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`UpdateWalletName > should show an error message for duplicate name 4`] = `
<DocumentFragment>
  <div
    class="custom-scroll overflow-overlay fixed inset-0 z-50 flex w-full overflow-y-hidden bg-theme-secondary-900-rgba/40 backdrop-blur-xl dark:bg-black-rgba/40 dark:bg-opacity-80 md:py-20"
    data-testid="Modal__overlay"
  >
    <div
      class="max-w-full flex-1 md:m-auto md:max-w-2xl md:px-10"
      tabindex="-1"
    >
      <div
        class="relative flex min-h-full flex-col overflow-hidden bg-theme-background shadow-2xl sm:mb-0 md:h-auto md:rounded-xl px-6 pt-4 md:p-8"
        data-testid="Modal__inner"
      >
        <div
          class="absolute right-0 top-0 z-10 mr-6 mt-4 rounded bg-theme-primary-100 transition-all duration-100 ease-linear hover:bg-theme-primary-800 hover:text-white green:hover:bg-theme-primary-700 dark:bg-theme-secondary-800 dark:text-theme-secondary-200 dark:hover:bg-theme-primary-500 dark:hover:text-white md:mr-8 md:mt-8"
        >
          <button
            class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none h-8 w-8"
            data-testid="Modal__close-button"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div>
                <div
                  style="height: 16px; width: 16px;"
                >
                  <svg
                    id="cross"
                    style="height: 100%; width: 100%;"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    >
                      <path
                        d="M.954 18.981l18-18M18.954 18.981l-18-18"
                      />
                    </g>
                  </svg>
                </div>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative flex flex-1 flex-col space-y-1.5"
        >
          <h2
            class="mb-0 max-w-[calc(100%_-_32px)] text-lg font-bold md:pt-0 md:text-2xl"
          >
            Wallet Name
          </h2>
          <div
            class="flex flex-1 flex-col"
          >
            <div
              class="whitespace-pre-line pr-10 text-sm text-theme-secondary-text md:pr-0 md:text-base"
            >
              Enter a name for this wallet address (only visible to you).
            </div>
            <form
              class="mt-8"
              data-testid="Form"
            >
              <fieldset
                class="[&>.FormLabel]:text-theme-danger-500 focus-within:[&>.FormLabel]:text-theme-danger-500 flex min-w-0 flex-col"
              >
                <label
                  class="FormLabel mb-2 flex text-sm font-semibold leading-[17px] text-theme-secondary-text transition-colors duration-100"
                  data-testid="FormLabel"
                  for="name"
                >
                  Wallet Name
                </label>
                <div
                  class="relative"
                >
                  <div
                    class="flex w-full appearance-none items-center space-x-2 rounded px-4 text-theme-text transition-colors duration-200 border border-theme-danger-500 bg-theme-background focus-within:ring-theme-danger-500 focus-within:ring-1 h-12 overflow-hidden sm:h-14"
                  >
                    <div
                      class="relative flex h-full flex-1"
                    >
                      <input
                        aria-invalid="true"
                        autocomplete="off"
                        class="!bg-transparent !p-0 focus:shadow-none focus:outline-none focus:!ring-0 focus:!ring-transparent [&.shadow-none]:shadow-none no-ligatures w-full border-none !text-sm placeholder:text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 sm:!text-base"
                        data-testid="UpdateWalletName__input"
                        name="name"
                        type="text"
                        value=""
                      />
                    </div>
                    <div
                      class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-danger-500"
                      data-testid="Input__addon-end"
                    >
                      <span
                        data-errortext="The name 'ARK Wallet 2' is already assigned to another wallet"
                        data-testid="Input__error"
                      >
                        <div
                          class="text-theme-danger-500"
                        >
                          <div
                            style="height: 20px; width: 20px;"
                          >
                            <svg
                              id="circle-exclamation-mark"
                              style="height: 100%; width: 100%;"
                              viewBox="0 0 20 20"
                              x="0"
                              xml:space="preserve"
                              xmlns="http://www.w3.org/2000/svg"
                              y="0"
                            >
                              <g
                                fill="none"
                                stroke="currentColor"
                                stroke-width="2"
                              >
                                <circle
                                  cx="10"
                                  cy="10"
                                  r="9"
                                  stroke-miterlimit="10"
                                />
                                <path
                                  d="M10 10.5v-5"
                                  stroke-linecap="round"
                                  stroke-miterlimit="10"
                                />
                                <path
                                  d="M10 14h0"
                                  stroke-linecap="round"
                                  stroke-linejoin="round"
                                />
                              </g>
                            </svg>
                          </div>
                        </div>
                      </span>
                    </div>
                  </div>
                </div>
              </fieldset>
              <div
                class="fixed inset-x-0 bottom-0 flex gap-3 bg-theme-background px-8 py-3 shadow-footer-smooth dark:bg-black dark:shadow-footer-smooth-dark sm:relative sm:inset-auto sm:mt-6 sm:justify-end sm:bg-transparent sm:p-0 sm:shadow-none sm:dark:bg-transparent sm:dark:shadow-none [&>button]:flex-1 sm:[&>button]:flex-none pb-3 sm:pb-0"
              >
                <button
                  class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed dark:bg-theme-secondary-800 dark:text-theme-secondary-200 bg-theme-primary-100 text-theme-primary-600 hover:bg-theme-primary-800 green:hover:bg-theme-primary-700 hover:text-white dark:hover:bg-theme-primary-500"
                  data-testid="UpdateWalletName__cancel"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Cancel
                  </div>
                </button>
                <button
                  class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed disabled:bg-theme-secondary-200 disabled:text-theme-secondary-400 dark:disabled:bg-theme-secondary-800 dark:disabled:text-theme-secondary-700"
                  data-testid="UpdateWalletName__submit"
                  disabled=""
                  type="submit"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Save
                  </div>
                </button>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`UpdateWalletName > should show error message when name consists only of whitespace 1`] = `
<DocumentFragment>
  <div
    class="custom-scroll overflow-overlay fixed inset-0 z-50 flex w-full overflow-y-hidden bg-theme-secondary-900-rgba/40 backdrop-blur-xl dark:bg-black-rgba/40 dark:bg-opacity-80 md:py-20"
    data-testid="Modal__overlay"
  >
    <div
      class="max-w-full flex-1 md:m-auto md:max-w-2xl md:px-10"
      tabindex="-1"
    >
      <div
        class="relative flex min-h-full flex-col overflow-hidden bg-theme-background shadow-2xl sm:mb-0 md:h-auto md:rounded-xl px-6 pt-4 md:p-8"
        data-testid="Modal__inner"
      >
        <div
          class="absolute right-0 top-0 z-10 mr-6 mt-4 rounded bg-theme-primary-100 transition-all duration-100 ease-linear hover:bg-theme-primary-800 hover:text-white green:hover:bg-theme-primary-700 dark:bg-theme-secondary-800 dark:text-theme-secondary-200 dark:hover:bg-theme-primary-500 dark:hover:text-white md:mr-8 md:mt-8"
        >
          <button
            class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none h-8 w-8"
            data-testid="Modal__close-button"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div>
                <div
                  style="height: 16px; width: 16px;"
                >
                  <svg
                    id="cross"
                    style="height: 100%; width: 100%;"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    >
                      <path
                        d="M.954 18.981l18-18M18.954 18.981l-18-18"
                      />
                    </g>
                  </svg>
                </div>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative flex flex-1 flex-col space-y-1.5"
        >
          <h2
            class="mb-0 max-w-[calc(100%_-_32px)] text-lg font-bold md:pt-0 md:text-2xl"
          >
            Wallet Name
          </h2>
          <div
            class="flex flex-1 flex-col"
          >
            <div
              class="whitespace-pre-line pr-10 text-sm text-theme-secondary-text md:pr-0 md:text-base"
            >
              Enter a name for this wallet address (only visible to you).
            </div>
            <form
              class="mt-8"
              data-testid="Form"
            >
              <fieldset
                class="[&>.FormLabel]:text-theme-danger-500 focus-within:[&>.FormLabel]:text-theme-danger-500 flex min-w-0 flex-col"
              >
                <label
                  class="FormLabel mb-2 flex text-sm font-semibold leading-[17px] text-theme-secondary-text transition-colors duration-100"
                  data-testid="FormLabel"
                  for="name"
                >
                  Wallet Name
                </label>
                <div
                  class="relative"
                >
                  <div
                    class="flex w-full appearance-none items-center space-x-2 rounded px-4 text-theme-text transition-colors duration-200 border border-theme-danger-500 bg-theme-background focus-within:ring-theme-danger-500 focus-within:ring-1 h-12 overflow-hidden sm:h-14"
                  >
                    <div
                      class="relative flex h-full flex-1"
                    >
                      <input
                        aria-invalid="true"
                        autocomplete="off"
                        class="!bg-transparent !p-0 focus:shadow-none focus:outline-none focus:!ring-0 focus:!ring-transparent [&.shadow-none]:shadow-none no-ligatures w-full border-none !text-sm placeholder:text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 sm:!text-base"
                        data-testid="UpdateWalletName__input"
                        name="name"
                        type="text"
                        value=""
                      />
                    </div>
                    <div
                      class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-danger-500"
                      data-testid="Input__addon-end"
                    >
                      <span
                        data-errortext="Wallet Name required"
                        data-testid="Input__error"
                      >
                        <div
                          class="text-theme-danger-500"
                        >
                          <div
                            style="height: 20px; width: 20px;"
                          >
                            <svg
                              id="circle-exclamation-mark"
                              style="height: 100%; width: 100%;"
                              viewBox="0 0 20 20"
                              x="0"
                              xml:space="preserve"
                              xmlns="http://www.w3.org/2000/svg"
                              y="0"
                            >
                              <g
                                fill="none"
                                stroke="currentColor"
                                stroke-width="2"
                              >
                                <circle
                                  cx="10"
                                  cy="10"
                                  r="9"
                                  stroke-miterlimit="10"
                                />
                                <path
                                  d="M10 10.5v-5"
                                  stroke-linecap="round"
                                  stroke-miterlimit="10"
                                />
                                <path
                                  d="M10 14h0"
                                  stroke-linecap="round"
                                  stroke-linejoin="round"
                                />
                              </g>
                            </svg>
                          </div>
                        </div>
                      </span>
                    </div>
                  </div>
                </div>
              </fieldset>
              <div
                class="fixed inset-x-0 bottom-0 flex gap-3 bg-theme-background px-8 py-3 shadow-footer-smooth dark:bg-black dark:shadow-footer-smooth-dark sm:relative sm:inset-auto sm:mt-6 sm:justify-end sm:bg-transparent sm:p-0 sm:shadow-none sm:dark:bg-transparent sm:dark:shadow-none [&>button]:flex-1 sm:[&>button]:flex-none pb-3 sm:pb-0"
              >
                <button
                  class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed dark:bg-theme-secondary-800 dark:text-theme-secondary-200 bg-theme-primary-100 text-theme-primary-600 hover:bg-theme-primary-800 green:hover:bg-theme-primary-700 hover:text-white dark:hover:bg-theme-primary-500"
                  data-testid="UpdateWalletName__cancel"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Cancel
                  </div>
                </button>
                <button
                  class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed disabled:bg-theme-secondary-200 disabled:text-theme-secondary-400 dark:disabled:bg-theme-secondary-800 dark:disabled:text-theme-secondary-700"
                  data-testid="UpdateWalletName__submit"
                  disabled=""
                  type="submit"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Save
                  </div>
                </button>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`UpdateWalletName > should show error message when name exceeds 42 characters 1`] = `
<DocumentFragment>
  <div
    class="custom-scroll overflow-overlay fixed inset-0 z-50 flex w-full overflow-y-hidden bg-theme-secondary-900-rgba/40 backdrop-blur-xl dark:bg-black-rgba/40 dark:bg-opacity-80 md:py-20"
    data-testid="Modal__overlay"
  >
    <div
      class="max-w-full flex-1 md:m-auto md:max-w-2xl md:px-10"
      tabindex="-1"
    >
      <div
        class="relative flex min-h-full flex-col overflow-hidden bg-theme-background shadow-2xl sm:mb-0 md:h-auto md:rounded-xl px-6 pt-4 md:p-8"
        data-testid="Modal__inner"
      >
        <div
          class="absolute right-0 top-0 z-10 mr-6 mt-4 rounded bg-theme-primary-100 transition-all duration-100 ease-linear hover:bg-theme-primary-800 hover:text-white green:hover:bg-theme-primary-700 dark:bg-theme-secondary-800 dark:text-theme-secondary-200 dark:hover:bg-theme-primary-500 dark:hover:text-white md:mr-8 md:mt-8"
        >
          <button
            class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none h-8 w-8"
            data-testid="Modal__close-button"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div>
                <div
                  style="height: 16px; width: 16px;"
                >
                  <svg
                    id="cross"
                    style="height: 100%; width: 100%;"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    >
                      <path
                        d="M.954 18.981l18-18M18.954 18.981l-18-18"
                      />
                    </g>
                  </svg>
                </div>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative flex flex-1 flex-col space-y-1.5"
        >
          <h2
            class="mb-0 max-w-[calc(100%_-_32px)] text-lg font-bold md:pt-0 md:text-2xl"
          >
            Wallet Name
          </h2>
          <div
            class="flex flex-1 flex-col"
          >
            <div
              class="whitespace-pre-line pr-10 text-sm text-theme-secondary-text md:pr-0 md:text-base"
            >
              Enter a name for this wallet address (only visible to you).
            </div>
            <form
              class="mt-8"
              data-testid="Form"
            >
              <fieldset
                class="[&>.FormLabel]:text-theme-danger-500 focus-within:[&>.FormLabel]:text-theme-danger-500 flex min-w-0 flex-col"
              >
                <label
                  class="FormLabel mb-2 flex text-sm font-semibold leading-[17px] text-theme-secondary-text transition-colors duration-100"
                  data-testid="FormLabel"
                  for="name"
                >
                  Wallet Name
                </label>
                <div
                  class="relative"
                >
                  <div
                    class="flex w-full appearance-none items-center space-x-2 rounded px-4 text-theme-text transition-colors duration-200 border border-theme-danger-500 bg-theme-background focus-within:ring-theme-danger-500 focus-within:ring-1 h-12 overflow-hidden sm:h-14"
                  >
                    <div
                      class="relative flex h-full flex-1"
                    >
                      <input
                        aria-invalid="true"
                        autocomplete="off"
                        class="!bg-transparent !p-0 focus:shadow-none focus:outline-none focus:!ring-0 focus:!ring-transparent [&.shadow-none]:shadow-none no-ligatures w-full border-none !text-sm placeholder:text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 sm:!text-base"
                        data-testid="UpdateWalletName__input"
                        name="name"
                        type="text"
                        value=""
                      />
                    </div>
                    <div
                      class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-danger-500"
                      data-testid="Input__addon-end"
                    >
                      <span
                        data-errortext="Wallet Name should have at most 42 characters"
                        data-testid="Input__error"
                      >
                        <div
                          class="text-theme-danger-500"
                        >
                          <div
                            style="height: 20px; width: 20px;"
                          >
                            <svg
                              id="circle-exclamation-mark"
                              style="height: 100%; width: 100%;"
                              viewBox="0 0 20 20"
                              x="0"
                              xml:space="preserve"
                              xmlns="http://www.w3.org/2000/svg"
                              y="0"
                            >
                              <g
                                fill="none"
                                stroke="currentColor"
                                stroke-width="2"
                              >
                                <circle
                                  cx="10"
                                  cy="10"
                                  r="9"
                                  stroke-miterlimit="10"
                                />
                                <path
                                  d="M10 10.5v-5"
                                  stroke-linecap="round"
                                  stroke-miterlimit="10"
                                />
                                <path
                                  d="M10 14h0"
                                  stroke-linecap="round"
                                  stroke-linejoin="round"
                                />
                              </g>
                            </svg>
                          </div>
                        </div>
                      </span>
                    </div>
                  </div>
                </div>
              </fieldset>
              <div
                class="fixed inset-x-0 bottom-0 flex gap-3 bg-theme-background px-8 py-3 shadow-footer-smooth dark:bg-black dark:shadow-footer-smooth-dark sm:relative sm:inset-auto sm:mt-6 sm:justify-end sm:bg-transparent sm:p-0 sm:shadow-none sm:dark:bg-transparent sm:dark:shadow-none [&>button]:flex-1 sm:[&>button]:flex-none pb-3 sm:pb-0"
              >
                <button
                  class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed dark:bg-theme-secondary-800 dark:text-theme-secondary-200 bg-theme-primary-100 text-theme-primary-600 hover:bg-theme-primary-800 green:hover:bg-theme-primary-700 hover:text-white dark:hover:bg-theme-primary-500"
                  data-testid="UpdateWalletName__cancel"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Cancel
                  </div>
                </button>
                <button
                  class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed disabled:bg-theme-secondary-200 disabled:text-theme-secondary-400 dark:disabled:bg-theme-secondary-800 dark:disabled:text-theme-secondary-700"
                  data-testid="UpdateWalletName__submit"
                  disabled=""
                  type="submit"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Save
                  </div>
                </button>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
